--- a/app/src/main/res/layout/raw.xml
+++ b/app/src/main/res/layout/raw.xml
@@ -5,17 +5,19 @@
     android:orientation="vertical">
        <RelativeLayout
            android:layout_width="190dp"
-           android:layout_height="180dp">
+           android:layout_height="180dp"
+           android:outlineAmbientShadowColor="#000"
+           android:outlineSpotShadowColor="#000">
 
            <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:id="@+id/raw_product"
-               android:layout_alignParentBottom="true"
-               android:layout_centerHorizontal="true"
-               android:text="Pents"
-               android:textStyle="bold|italic"
-               android:textSize="25dp"/>
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/raw_product"
+           android:layout_alignParentBottom="true"
+           android:layout_centerHorizontal="true"
+           android:text="Pents"
+           android:textStyle="bold|italic"
+           android:textSize="25dp"/>
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
